agregar colors con css en mokepon

--- a/mokepon/mokepon.html
+++ b/mokepon/mokepon.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <title>MOKEPON</title>
         <script src="./js/mokepon.js"></script>
-
+        <link rel="stylesheet" href="./css/styles.css">
 
 
     </head>
@@ -16,17 +16,14 @@
             <!-- mascotas -->
           <ul>
             <li>
-              <label for="Dreidon">Dreidon</label>
-              <input type="radio" name="mascota" id="Dreidon"/>
-            </li> 
-            <li>
-              <label for="Tortu">Tortu</label>
-              <input type="radio" name="mascota" id="Tortu"/>
+              <label for="Dreidon">Dreidon <input type="radio" name="mascota" id="Dreidon" /></label>
             </li>
             <li>
-              <label for="Ramon">Ramon</label>
-              <input type="radio" name="mascota" id="Ramon"/>
-             </li>
+              <label for="Tortu">Tortu <input type="radio" name="mascota" id="Tortu" /></label>
+            </li>
+            <li>
+             <label for="Ramon">Ramon <input type="radio" name="mascota" id="Ramon" /></label>
+            </li>
            </ul>
 
                <button id="boton-seleccion">SELECCIONAR</button>
